--- a/styles/global.css
+++ b/styles/global.css
@@ -1,10 +1,12 @@
-html, body , #__nuxt {
+html,
+body,
+#__nuxt {
   height: 100vh;
   margin: 0;
   padding: 0;
 }
 
-html {
+html.dark {
   background: #111;
   color: white;
   color-scheme: dark;
