--- a/www/src/layouts/PageLayout.astro
+++ b/www/src/layouts/PageLayout.astro
@@ -3,9 +3,9 @@
 // import Header from "../components/Header.astro";
 
 export interface Props {
-  title: string;
-  description: string;
-  class?: string;
+  title: string
+  description: string
+  class?: string
 }
 
 const {
