fix(www): add borders

--- a/www/src/layouts/PageLayout.astro
+++ b/www/src/layouts/PageLayout.astro
@@ -80,6 +80,10 @@ const {
         @apply: max-w-4xl lg:!mx-auto !mx-4 py3 md:px14 md:py10;
       }
 
+      .astro-code {
+        @apply: overflow-auto p-4 border border-base rounded;
+      }
+
       html.dark .astro-code,
       html.dark .astro-code span {
         color: var(--shiki-dark) !important;
