fix(www): make theme toggle focusable

--- a/www/src/components/Header.astro
+++ b/www/src/components/Header.astro
@@ -16,7 +16,9 @@
         </svg>
       </a>
 
-      <button id="theme-toggle" class="ml1 text-lg op-50 hover:op-75 text-3xl dark:i-carbon-moon i-carbon-sun" title="Toggle Theme" aria-label="Toggle Theme"></button>
+      <button id="theme-toggle" class="ml1 text-lg op-50 hover:op-75" title="Toggle Theme" aria-label="Toggle Theme">
+        <span class="block dark:i-carbon-moon i-carbon-sun"></span>
+      </button>
     </div>
   </nav>
 </header>
