--- a/www/src/layouts/PageLayout.astro
+++ b/www/src/layouts/PageLayout.astro
@@ -61,7 +61,7 @@ const {
   </head>
   <body class="font-sans">
     <Header />
-    <main class="prose mt-8 flex flex-col" class:list={clazz}>
+    <main class="prose max-w-none mt-8 flex flex-col" class:list={clazz}>
       <slot />
     </main>
     <style is:global>
@@ -89,9 +89,9 @@ const {
         color: var(--shiki-dark) !important;
         background-color: var(--shiki-dark-bg) !important;
         /* Optional, if you also want font styles */
-        font-style: var(--shiki-dark-font-style) !important;
+        /* font-style: var(--shiki-dark-font-style) !important;
         font-weight: var(--shiki-dark-font-weight) !important;
-        text-decoration: var(--shiki-dark-text-decoration) !important;
+        text-decoration: var(--shiki-dark-text-decoration) !important; */
       }
     </style>
   </body>
@@ -105,6 +105,5 @@ const {
       document.documentElement.classList.toggle("dark", true);
     }
   }
-
   run();
 </script>
