fix(www): center 404 text

--- a/www/src/components/Header.astro
+++ b/www/src/components/Header.astro
@@ -1,10 +1,9 @@
 <header>
   <nav class="flex flex-wrap items-center justify-between">
-    <div class="flex items-center gap-2">
+    <a href="/" class="flex items-center gap-2">
       <span class="i-twemoji-clipboard text-2xl"></span>
-      <!-- <Icon name="📋" size="32" /> -->
       <h1>projectrc.luxass.dev</h1>
-    </div>
+    </a>
 
     <div class="flex items-center justify-between gap-2">
       <a href="https://github.com/luxass/projectrc.luxass.dev" target="_blank" rel="noopener noreferrer" title="GitHub" aria-label="GitHub">
