--- a/www/src/pages/404.astro
+++ b/www/src/pages/404.astro
@@ -7,7 +7,7 @@ export const prerender = true;
 <PageLayout
   title="404"
   description="404 - Page not found"
-  class:list={["flex flex-col items-center justify-center"]}
+  class:list={["h-100dvh flex flex-col items-center justify-center"]}
 >
   <h1 class="!text-8xl !text-blue-600">404</h1>
   <p class="mb-8 !text-2xl">Page not found</p>
