--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,14 @@ html.dark {
 body {
   @apply max-w-4xl lg:!mx-auto !mx-4 py-3 md:px-14 md:py-10;
 }
+
+html.dark .shiki,
+html.dark .shiki span {
+  color: var(--shiki-dark) !important;
+  background-color: var(--shiki-dark-bg) !important;
+  /* Optional, if you also want font styles */
+  font-style: var(--shiki-dark-font-style) !important;
+  font-weight: var(--shiki-dark-font-weight) !important;
+  text-decoration: var(--shiki-dark-text-decoration) !important;
+}
+
