--- a/app/globals.css
+++ b/app/globals.css
@@ -28,3 +28,11 @@ html.dark .shiki span {
   text-decoration: var(--shiki-dark-text-decoration) !important;
 }
 
+.shiki {
+  @apply overflow-auto p-4 border border-gray-400/20 rounded;
+}
+
+
+.copy {
+  transition: border-color .25s,background-color .25s,opacity .25s;
+}
