--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 html {
   @apply: antialiased touch-manipulation scroll-smooth text-base;
   text-rendering: optimizeLegibility;
@@ -32,7 +31,9 @@ html.dark .shiki span {
   @apply overflow-auto p-4 border border-gray-400/20 rounded;
 }
 
-
 .copy {
-  transition: border-color .25s,background-color .25s,opacity .25s;
+  transition:
+    border-color 0.25s,
+    background-color 0.25s,
+    opacity 0.25s;
 }
