--- a/app/globals.css
+++ b/app/globals.css
@@ -7,24 +7,22 @@ html {
   text-rendering: optimizeLegibility;
 }
 
-html.dark {
-  background: #111;
-  color: white;
-  color-scheme: dark;
-}
-
 body {
-  @apply max-w-4xl lg:!mx-auto !mx-4 py-3 md:px-14 md:py-10;
+  @apply max-w-4xl lg:!mx-auto !mx-4 py-3 md:px-14 md:py-10 dark:bg-[#111] dark:text-white;
 }
 
-html.dark .shiki,
-html.dark .shiki span {
-  color: var(--shiki-dark) !important;
-  background-color: var(--shiki-dark-bg) !important;
-  /* Optional, if you also want font styles */
-  font-style: var(--shiki-dark-font-style) !important;
-  font-weight: var(--shiki-dark-font-weight) !important;
-  text-decoration: var(--shiki-dark-text-decoration) !important;
+
+
+@media (prefers-color-scheme: dark) {
+  .shiki,
+  .shiki span {
+    color: var(--shiki-dark) !important;
+    background-color: var(--shiki-dark-bg) !important;
+    /* Optional, if you also want font styles */
+    font-style: var(--shiki-dark-font-style) !important;
+    font-weight: var(--shiki-dark-font-weight) !important;
+    text-decoration: var(--shiki-dark-text-decoration) !important;
+  }
 }
 
 .shiki {
