--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,13 +1,15 @@
 ---
 import { ViewTransitions, fade } from "astro:transitions";
 import Header from "../components/Header.astro";
+import "../styles/globals.css";
 
 interface Props {
   title: string
   description: string
+  class?: string
 }
 
-const { title, description } = Astro.props;
+const { title, description, class: clazz } = Astro.props;
 
 const image = new URL(
     `https://image.luxass.dev/api/image/text?input=${encodeURIComponent(
@@ -20,7 +22,7 @@ const image = new URL(
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <ViewTransitions transition:animate={fade({ duration: "0.2s" })} />
 
@@ -59,41 +61,9 @@ const image = new URL(
     <link rel="preload" href="/fonts/dm-sans.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   </head>
   <body>
-    <Header />
-    <main class="prose mt-8 flex h-dvh max-w-none flex-col">
+    <Header transition:animate="none" />
+    <main class="prose flex-1 p-4 max-w-none" class:list={clazz} transition:animate="slide">
       <slot />
     </main>
-  </body><style is:global>
-    html {
-      @apply: antialiased touch-manipulation scroll-smooth text-base;
-      text-rendering: optimizeLegibility;
-    }
-
-    body {
-      @apply max-w-4xl lg:!mx-auto !mx-4 py-3 md:px-14 md:py-10 dark:bg-[#111] dark:text-white;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      .shiki,
-      .shiki span {
-        color: var(--shiki-dark) !important;
-        background-color: var(--shiki-dark-bg) !important;
-        /* Optional, if you also want font styles */
-        font-style: var(--shiki-dark-font-style) !important;
-        font-weight: var(--shiki-dark-font-weight) !important;
-        text-decoration: var(--shiki-dark-text-decoration) !important;
-      }
-    }
-
-    .shiki {
-      @apply overflow-auto p-4 border border-gray-400/20 rounded;
-    }
-
-    .copy {
-      transition:
-        border-color 0.25s,
-        background-color 0.25s,
-        opacity 0.25s;
-    }
-  </style>
+  </body>
 </html>
