--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,7 @@ const jsonSchema = zodToJsonSchema(PROJECTRC_SCHEMA);
 
 const html = await codeToHtml(JSON.stringify(jsonSchema, null, 2), {
   lang: "json",
-  themes: {
-    light: "vitesse-light",
-    dark: "vitesse-dark",
-  },
+  theme: "vitesse-dark",
 });
 ---
 
@@ -24,20 +21,20 @@ const html = await codeToHtml(JSON.stringify(jsonSchema, null, 2), {
     <p>
       Since you are here, you are probably wondering why and what this
       {" "}
-      <span class="rounded bg-gray-200 p-0.5 dark:bg-gray-400/10">.projectrc</span>
+      <span class="rounded p-0.5 bg-gray-400/10">.projectrc</span>
       {" "}
       is.
     </p>
     <p>
       It&apos;s just a little file that I use on
       {" "}
-      <a href="https://luxass.dev" class="rounded bg-gray-200 p-0.5 dark:bg-gray-400/10">
+      <a href="https://luxass.dev" class="rounded p-0.5 bg-gray-400/10">
         <span>my website</span>
       </a>
       {" "}
       to generate a list of projects that are being showcased
       {" "}
-      <a class="rounded bg-gray-200 p-0.5 dark:bg-gray-400/10" href="https://luxass.dev/projects" aria-label="Link to my projects page">here</a>
+      <a class="rounded p-0.5 bg-gray-400/10" href="https://luxass.dev/projects" aria-label="Link to my projects page">here</a>
       .
     </p>
   </article>
