--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,7 +1,7 @@
 ---
-import { ViewTransitions, fade } from "astro:transitions";
-import Header from "../components/Header.astro";
-import "../styles/globals.css";
+import { ViewTransitions, fade } from "astro:transitions"
+import Header from "../components/Header.astro"
+import "../styles/globals.css"
 
 interface Props {
   title: string
@@ -9,7 +9,7 @@ interface Props {
   class?: string
 }
 
-const { title, description, class: clazz } = Astro.props;
+const { title, description, class: clazz } = Astro.props
 
 const image = new URL(
     `https://image.luxass.dev/api/image/text?input=${encodeURIComponent(
