--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header>
+<header class="px-4">
   <nav class="flex flex-wrap items-center justify-between">
     <a href="/" class="flex items-center gap-2">
       <span class="i-twemoji-clipboard text-2xl"></span>
