--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,30 +1,30 @@
 ---
-import { ViewTransitions, fade } from "astro:transitions";
-import Header from "../components/Header.astro";
-import "../styles/globals.css";
+import { ViewTransitions, fade } from 'astro:transitions'
+import Header from '../components/Header.astro'
+import '../styles/globals.css'
 
 interface Props {
-  title: string;
-  description: string;
-  class?: string;
+  title: string
+  description: string
+  class?: string
 }
 
-const { title, description, class: clazz } = Astro.props;
+const { title, description, class: clazz } = Astro.props
 
 const image = new URL(
-    `https://image.luxass.dev/api/image/text?input=${encodeURIComponent(
-      JSON.stringify({
-        width: 300,
-        height: 300,
-      }),
-    )}`,
-);
+  `https://image.luxass.dev/api/image/text?input=${encodeURIComponent(
+    JSON.stringify({
+      width: 300,
+      height: 300,
+    }),
+  )}`,
+)
 ---
 
 <!doctype html>
 <html lang="en" class="dark">
   <head>
-    <ViewTransitions transition:animate={fade({ duration: "0.2s" })} />
+    <ViewTransitions transition:animate={fade({ duration: '0.2s' })} />
 
     <!-- global metadata -->
     <meta charset="utf-8" />
@@ -32,12 +32,20 @@ const image = new URL(
     <link rel="icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <link rel="canonical" href={Astro.url} />
-    <link rel="alternate" type="application/rss+xml" href="/rss.xml" title="RSS" />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      href="/rss.xml"
+      title="RSS"
+    />
 
     <!-- primary meta tags -->
     <title>{title}</title>
     <meta name="title" content={title} />
-    <meta name="keywords" content="lucas nørgård, luxass, nørgård, lucas, fullstack, projects, backend, frontend, web developer, website" />
+    <meta
+      name="keywords"
+      content="lucas nørgård, luxass, nørgård, lucas, fullstack, projects, backend, frontend, web developer, website"
+    />
     <meta name="description" content={description} />
 
     <!-- open graph -->
@@ -58,11 +66,21 @@ const image = new URL(
     <!-- links -->
     <link rel="sitemap" href="/sitemap-index.xml" />
 
-    <link rel="preload" href="/fonts/dm-sans.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+    <link
+      rel="preload"
+      href="/fonts/dm-sans.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <Header transition:animate="none" />
-    <main class="prose flex-1 p-4 max-w-none" class:list={clazz} transition:animate="slide">
+    <main
+      class="prose flex-1 p-4 max-w-none"
+      class:list={clazz}
+      transition:animate="slide"
+    >
       <slot />
     </main>
   </body>
