--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,12 +7,12 @@ body {
   @apply text-neutral-300 bg-neutral-900 px-0 md:px-4 py-4 md:py-8
       max-w-5xl md:mx-auto relative min-h-screen text-sm
       md:text-base flex flex-col;
-  font-family: 'DM Sans', 'DM Sans Fallback';
+  font-family: "DM Sans", "DM Sans Fallback";
 }
 
 @font-face {
-  font-family: 'DM Sans';
-  src: url('/fonts/dm-sans.woff2') format('woff2');
+  font-family: "DM Sans";
+  src: url("/fonts/dm-sans.woff2") format("woff2");
   font-weight: 300 900;
   font-style: normal;
   font-display: swap;
