chore: place `.` right after link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,17 +32,15 @@ const html = await codeToHtml(JSON.stringify(jsonSchema, null, 2), {
       It&apos;s just a little file that I use on
       {" "}
       <a href="https://luxass.dev" class="rounded p-0.5 bg-gray-400/10">
-        <span>my website</span>
-      </a>
-      {" "}
+        <span>my website</span></a
+      >{" "}
       to generate a list of projects that are being showcased
       {" "}
       <a
         class="rounded p-0.5 bg-gray-400/10"
         href="https://luxass.dev/projects"
         aria-label="Link to my projects page">here</a
-      >
-      .
+      >.
     </p>
   </article>
 
