fix: change old references to projectrc to mosaic

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -78,12 +78,12 @@ const image = new URL(
       <nav class="flex flex-wrap items-center justify-between">
         <a href="/" class="flex items-center gap-2">
           <span class="i-twemoji-clipboard text-2xl"></span>
-          <h1>projectrc.luxass.dev</h1>
+          <h1>mosaic.luxass.dev</h1>
         </a>
 
         <div class="flex items-center justify-between gap-2">
           <a
-            href="https://github.com/luxass/projectrc.luxass.dev"
+            href="https://github.com/luxass/mosaic.luxass.dev"
             target="_blank"
             rel="noopener noreferrer"
             title="GitHub"
