feat: add new page layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  @apply text-neutral-300 bg-neutral-900 px-0 md:px-4 py-4 md:py-8
+  @apply text-neutral-800 bg-neutral-100 dark:(text-neutral-300 bg-neutral-900) px-0 md:px-4 py-4 md:py-8
       max-w-5xl md:mx-auto relative min-h-screen text-sm
       md:text-base flex flex-col;
   font-family: "DM Sans", "DM Sans Fallback";
