--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,5 @@
 ---
-/* eslint astro/no-set-html-directive: "off" */
-import zodToJsonSchema from "zod-to-json-schema";
-import { codeToHtml } from "shikiji";
 import PageLayout from "../layouts/PageLayout.astro";
-import { MOSAIC_SCHEMA } from "../lib/json-schema";
-
-const jsonSchema = zodToJsonSchema(MOSAIC_SCHEMA);
-
-const html = await codeToHtml(JSON.stringify(jsonSchema, null, 2), {
-  lang: "json",
-  themes: {
-    dark: "vitesse-dark",
-    light: "vitesse-light",
-  },
-});
 ---
 
 <PageLayout
@@ -26,33 +12,28 @@ const html = await codeToHtml(JSON.stringify(jsonSchema, null, 2), {
     <p>
       Since you are here, you are probably wondering why and what this
       {" "}
-      <span class="rounded p-0.5 bg-gray-400/10">.projectrc</span>
+      <span class="rounded p-0.5 bg-gray-400/10">mosaic.toml</span>
       {" "}
-      is.
+      file is.
     </p>
     <p>
-      It&apos;s just a little file that I use on
-      {" "}
-      <a href="https://luxass.dev" class="rounded p-0.5 bg-gray-400/10">
-        <span>my website</span></a
-      >{" "}
-      to generate a list of projects that are being showcased
-      {" "}
-      <a
-        class="rounded p-0.5 bg-gray-400/10"
-        href="https://luxass.dev/projects"
-        aria-label="Link to my projects page">here</a
-      >.
+      It&apos;s just a little file that I use on projects i want to show off on
+      <a href="https://luxass.dev">
+        <span class="rounded p-0.5 bg-gray-400/10">my personal website</span>
+      </a>
+    </p>
+
+    <p>
+      The file contains some metadata about the project, like the name,
+      description, and links to the project&apos;s repository and website.
+      <br />
+      The file is fully typed using
+      <a href="https://json-schema.org/" target="_blank">
+        <span class="rounded p-0.5 bg-gray-400/10">JSON Schema</span>
+      </a> and the schema can be found
+      <a href="https://mosaic.luxass.dev/json-schema.json" target="_blank">
+        <span class="rounded p-0.5 bg-gray-400/10">here</span>
+      </a>
     </p>
   </article>
-
-  <div class="my-4">
-    <h2 class="my-2 text-xl font-semibold">
-      You can see the schema used here.
-    </h2>
-
-    <div class="group relative">
-      <div set:html={html} />
-    </div>
-  </div>
 </PageLayout>
